--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ body {
     font-size: 40px;
     width: 100%;
     line-height: 50px;
-    letter-spacing: -0.05em !important;
     font-family: 'SBAggroB';
 }
 
@@ -97,6 +96,7 @@ body {
     font-family: 'GongGothicMedium';
     font-weight: 700;
     margin-bottom: 30px;
+    color:black;
 }
 
 
@@ -142,6 +142,7 @@ body {
     font-family: 'GongGothicMedium';
     font-weight: 300;
     margin-bottom: 30px;
+     color:black;
 }
 
 #qna button:hover,
